Estilado casi listo, imagenes nuevas acorde a lo solicitado. Imagen del objetivo. Colores por paleta

--- a/juego.html
+++ b/juego.html
@@ -17,6 +17,7 @@
       </ul>
     </div>
     <div id="objetivo">
+      <img src="./images/final.png" alt="resultado final deseado del rompecabezas">
       <div class="texto-centrado">
 
       </div>
@@ -30,14 +31,14 @@
   </div>
   <div class="col-60">
     <div id="juego">
-      <div id="pieza1" class="piezasMoviles"><img src="./images/1.jpg" alt="pieza 1"></div>
-      <div id="pieza2" class="piezasMoviles"><img src="./images/2.jpg" alt="pieza 2"></div>
-      <div id="pieza3" class="piezasMoviles"><img src="./images/3.jpg" alt="pieza 3"></div>
-      <div id="pieza4" class="piezasMoviles"><img src="./images/4.jpg" alt="pieza 4"></div>
-      <div id="pieza5" class="piezasMoviles"><img src="./images/5.jpg" alt="pieza 5"></div>
-      <div id="pieza6" class="piezasMoviles"><img src="./images/6.jpg" alt="pieza 6"></div>
-      <div id="pieza7" class="piezasMoviles"><img src="./images/7.jpg" alt="pieza 7"></div>
-      <div id="pieza8" class="piezasMoviles"><img src="./images/8.jpg" alt="pieza 8"></div>
+      <div id="pieza1" class="piezasMoviles"><img src="./images/10.jpg" alt="pieza 1"></div>
+      <div id="pieza2" class="piezasMoviles"><img src="./images/20.jpg" alt="pieza 2"></div>
+      <div id="pieza3" class="piezasMoviles"><img src="./images/30.jpg" alt="pieza 3"></div>
+      <div id="pieza4" class="piezasMoviles"><img src="./images/40.jpg" alt="pieza 4"></div>
+      <div id="pieza5" class="piezasMoviles"><img src="./images/50.jpg" alt="pieza 5"></div>
+      <div id="pieza6" class="piezasMoviles"><img src="./images/60.jpg" alt="pieza 6"></div>
+      <div id="pieza7" class="piezasMoviles"><img src="./images/70.jpg" alt="pieza 7"></div>
+      <div id="pieza8" class="piezasMoviles"><img src="./images/80.jpg" alt="pieza 8"></div>
       <div id="pieza9" class="piezasMoviles"></div>
     </div>
   </div>
