Img en el div9, ahora el juego funciona como tiene que andar

--- a/juego.html
+++ b/juego.html
@@ -39,7 +39,7 @@
       <div id="pieza6" class="piezasMoviles"><img src="./images/60.jpg" alt="pieza 6"></div>
       <div id="pieza7" class="piezasMoviles"><img src="./images/70.jpg" alt="pieza 7"></div>
       <div id="pieza8" class="piezasMoviles"><img src="./images/80.jpg" alt="pieza 8"></div>
-      <div id="pieza9" class="piezasMoviles"></div>
+      <div id="pieza9" class="piezasMoviles"><img src="./images/9.png" alt=""></div>
     </div>
   </div>
   <div id="footer">
